fix css overflow

--- a/frontend/src/komponenter/Header/Header.less
+++ b/frontend/src/komponenter/Header/Header.less
@@ -144,8 +144,8 @@
   z-index: 1;
   display: flex;
   justify-content: space-between;
-  max-width: 100vw;
-  width: 100vw;
+  max-width: 100em;
+  width: 100%;
   height: 50px;
   padding: 0 1.5rem;
   background: #3e3832;
