--- a/frontend/src/stilark/App.less
+++ b/frontend/src/stilark/App.less
@@ -35,6 +35,10 @@ body {
   grid-area: content;
   max-width: 100em;
 }
+.main {
+  width: 100%;
+  display: block;
+}
 
 .main-nav {
   grid-area: nav;
